@@ -32,8 +32,10 @@ import com.microsoft.identity.common.java.constants.OAuth2SubErrorCode;
 import com.microsoft.identity.common.java.exception.BaseException;
 import com.microsoft.identity.common.java.exception.ClientException;
 import com.microsoft.identity.common.java.exception.DeviceRegistrationRequiredException;
+import com.microsoft.identity.common.java.exception.InsufficientDeviceRegistrationException;
 import com.microsoft.identity.common.java.exception.IntuneAppProtectionPolicyRequiredException;
 import com.microsoft.identity.common.java.exception.ServiceException;
+import com.microsoft.identity.common.java.exception.StrongDeviceRegistrationRequiredException;
 import com.microsoft.identity.common.java.exception.TerminalException;
 import com.microsoft.identity.common.java.exception.UiRequiredException;
 import com.microsoft.identity.common.java.exception.UserCancelException;
@@ -110,10 +112,25 @@ public class ExceptionAdapter {
                     MicrosoftAuthorizationErrorResponse microsoftAuthorizationErrorResponse =
                             (MicrosoftAuthorizationErrorResponse) authorizationErrorResponse;
 
-                    if (microsoftAuthorizationErrorResponse.getError().equals(
-                            MicrosoftAuthorizationErrorResponse.DEVICE_REGISTRATION_NEEDED)) {
+                    if (MicrosoftAuthorizationErrorResponse.DEVICE_REGISTRATION_NEEDED.equals(
+                            microsoftAuthorizationErrorResponse.getError())) {
 
-                        return new DeviceRegistrationRequiredException(
+                        if (microsoftAuthorizationErrorResponse.isTokenProtectionRequired()) {
+                            return new StrongDeviceRegistrationRequiredException(
+                                    microsoftAuthorizationErrorResponse.getError(),
+                                    microsoftAuthorizationErrorResponse.getErrorDescription(),
+                                    microsoftAuthorizationErrorResponse.getUpnToWpj()
+                            );
+                        } else {
+                            return new DeviceRegistrationRequiredException(
+                                    microsoftAuthorizationErrorResponse.getError(),
+                                    microsoftAuthorizationErrorResponse.getErrorDescription(),
+                                    microsoftAuthorizationErrorResponse.getUpnToWpj()
+                            );
+                        }
+                    } else if (MicrosoftAuthorizationErrorResponse.INSUFFICIENT_DEVICE_REGISTRATION.equals(
+                            microsoftAuthorizationErrorResponse.getError())) {
+                        return new InsufficientDeviceRegistrationException(
                                 microsoftAuthorizationErrorResponse.getError(),
                                 microsoftAuthorizationErrorResponse.getErrorDescription(),
                                 microsoftAuthorizationErrorResponse.getUpnToWpj()
