@@ -22,6 +22,11 @@
 // THE SOFTWARE.
 package com.microsoft.identity.common.java.net;
 
+import static com.microsoft.identity.common.java.AuthenticationConstants.AAD.CLIENT_REQUEST_ID;
+import static com.microsoft.identity.common.java.net.HttpConstants.HeaderField.CONTENT_TYPE;
+import static com.microsoft.identity.common.java.net.HttpConstants.HeaderField.XMS_CCS_REQUEST_ID;
+import static com.microsoft.identity.common.java.net.HttpConstants.HeaderField.XMS_CCS_REQUEST_SEQUENCE;
+
 import com.microsoft.identity.common.java.AuthenticationConstants;
 import com.microsoft.identity.common.java.flighting.CommonFlight;
 import com.microsoft.identity.common.java.flighting.CommonFlightsManager;
@@ -64,11 +69,6 @@ import io.opentelemetry.api.trace.Span;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.NonNull;
-
-import static com.microsoft.identity.common.java.AuthenticationConstants.AAD.CLIENT_REQUEST_ID;
-import static com.microsoft.identity.common.java.net.HttpConstants.HeaderField.CONTENT_TYPE;
-import static com.microsoft.identity.common.java.net.HttpConstants.HeaderField.XMS_CCS_REQUEST_ID;
-import static com.microsoft.identity.common.java.net.HttpConstants.HeaderField.XMS_CCS_REQUEST_SEQUENCE;
 
 /**
  * A client object for handling HTTP requests and responses.  This class accepts a RetryPolicy that
@@ -252,6 +252,38 @@ public class UrlConnectionHttpClient extends AbstractHttpClient {
                                final byte[] requestContent) throws IOException {
         recordHttpTelemetryEventStart(httpMethod.name(), requestUrl, requestHeaders.get(CLIENT_REQUEST_ID));
         final HttpRequest request = constructHttpRequest(httpMethod, requestUrl, requestHeaders, requestContent);
+        return retryPolicy.attempt(new Callable<HttpResponse>() {
+            public HttpResponse call() throws IOException {
+                return executeHttpSend(request, new Consumer<HttpResponse>() {
+                    @Override
+                    public void accept(HttpResponse httpResponse) {
+                        recordHttpTelemetryEventEnd(httpResponse);
+                    }
+                });
+            }
+        });
+    }
+
+    /**
+     * Execute an HTTP PATCH request.
+     * @param requestUrl the URL of the resource to operate on.
+     * @param requestHeaders the headers for the request.
+     * @param requestContent the body content of the request, if applicable.  May be null.
+     * @return an HttpResponse with the result of the call.
+     * @throws IOException if there was a communication problem.
+     */
+    @Override
+    public HttpResponse patch(@NonNull final URL requestUrl,
+                              @NonNull final Map<String, String> requestHeaders,
+                              @edu.umd.cs.findbugs.annotations.Nullable final byte[] requestContent) throws IOException {
+        recordHttpTelemetryEventStart(HttpMethod.PATCH.name(), requestUrl, requestHeaders.get(CLIENT_REQUEST_ID));
+        final HttpRequest request = new HttpRequest(
+                requestUrl,
+                requestHeaders,
+                HttpMethod.PATCH.name(),
+                requestContent,
+                null
+        );
         return retryPolicy.attempt(new Callable<HttpResponse>() {
             public HttpResponse call() throws IOException {
                 return executeHttpSend(request, new Consumer<HttpResponse>() {
